preparing for redmine integration

--- a/base-sboot-rest-api/src/main/resources/application.properties
+++ b/base-sboot-rest-api/src/main/resources/application.properties
@@ -118,4 +118,4 @@ core.security.ldap.securityAuthentication=simple
 #
 core.security.authentication.users={'solid.snake':'sh4dowMoses'}
 #
-test.active=true
+test.active=false
